add palantier code formatter and apply it